--- a/15 flexbox/css/estilos.css
+++ b/15 flexbox/css/estilos.css
@@ -1,40 +1,97 @@
 /* 
 Flexbox
     display:flex
-        Convierte el contenedor en un contexto para flexbox y hace que el contenedor sea un elemento de bloque para los elementos que lo rodean
+        ->Convierte el contenedor en un contexto para flexbox y hace que el contenedor sea un elemento de bloque para los elementos que lo rodean
       
     display:inline-flex
-        Convierte el contenedor en un contexto para flexbox y hace que el contenedor sea un elemento en línea para los elementos que lo rodean
+        ->Convierte el contenedor en un contexto para flexbox y hace que el contenedor sea un elemento en línea para los elementos que lo rodean
     
     flex-direction: row(default) | row-reverse | column |column-reverse
-        
         Modifica la dirección y cual es el eje principal.
-        Por defecto es row (horizontal de izquierda a derecha)
-        row-reverse (horizontal de derecha a izquierda)
-        column vertical de arriba abajo
-        column-reverse vertical de abajo arriba
+        ->Por defecto es row (horizontal de izquierda a derecha)
+        ->row-reverse (horizontal de derecha a izquierda)
+        ->column vertical de arriba abajo
+        ->column-reverse vertical de abajo arriba
     
     flex-wrap: no-wrap(default) | wrap | wrap-reverse
         Controla si los elementos saltarán de línea o no
-        no-wrap es el valor por defecto, un contenedor flex va a hacer que todos los elementos se queden en una línea si no le especificamos lo contrario
-        wrap hace que los elementos que no quepan en una línea (manteniendo sus dimensiones, si las tuvieran) salten a la linea inferior.
-        wrap-reverse hace lo mismo que wrap pero en lugar de hacer que salten a la línea inferior, hace que salten a la linea superior. 
+        ->no-wrap es el valor por defecto, un contenedor flex va a hacer que todos los elementos se queden en una línea si no le especificamos lo contrario
+        ->wrap hace que los elementos que no quepan en una línea (manteniendo sus dimensiones, si las tuvieran) salten a la linea inferior.
+        ->wrap-reverse hace lo mismo que wrap pero en lugar de hacer que salten a la línea inferior, hace que salten a la linea superior. 
 */
 
-.flex-container{
+
+.flex-container {
     background-color: #FCA17D;
     height: 400px;
-    /* padding: 0.5em 0;
-     */display: flex;
-    /* align-items: stretch;
- */}
+    display: flex;
+    margin-bottom: 1em;
+    flex-wrap: wrap;
+    /* justify-content: space-evenly; */ /* permite que el contenido se pueda alinear 
+    -> center: centra de manera automatica tidos los elementos del container
+    -> space-between: distrubuye los items de manera equitativa sin dejar espacio en los extremos
+    -> space-around: tiene una funcion a la anterior con la diferencia de que si deja un margen, solo que este es de diferente tamaño a la distancia  
+    -> space-evenly: misma funcion que la anterior con la diferencia de que esta funcion distribuye el espacio de manera equitativa en todos los espacios.
 
-.flex-item{
-    width: 300px;
-    height: 30px;
-    margin: 0.5em;
-    line-height: 30px;
-    color: aliceblue;
-    text-align: center;
-    background-color: #9A348E;
+    NOTA: esta propiedad solo aplica al eje principal
+    */
+
+    /* align-items: flex-end */; /* propiedad que permite que se alinee respecto al eje de cruze (cross axis) si se trata unicamente de una sola linea
+    
+    -> center: alinea en el centro del cross axis
+    -> flex-start: coloca en el inicio del cross axis 
+    -> strech: los coloca al inicio del cross axis pero abarcando todo el ancho del container
+    -> flex-end: alinea al respecto al final del cross-axis
+    */
+
+    align-content: center; /* similar al funcionamiento de align-items pero aplicado a mas de una fila de elementos. Tiene los mismos atributos que align-items */
 }
+
+.flex-item {
+    width: 50px;
+    height: 50px;
+    color: aliceblue;
+    background-color: #9A348E;
+    text-align: center;
+    line-height: 50px;
+    margin: 0.5em
+}
+
+.box {
+    border: 1px solid black;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    /* align-items: center; */
+}
+
+.box img {
+    max-width: 50%;
+}
+
+/* .prices {
+    display: flex;
+    align-items: flex-start;
+    height: 600px;
+    border: 1px solid black;
+}
+.prices__item {
+    width: 25%;
+    height: 300px;
+}
+.prices__item:first-child {
+    background: peru;
+}
+.prices__item:nth-child(2) {
+    background: green;
+    line-height: 20px;
+    align-self: center;
+}
+.prices__item:nth-child(3) {
+    background: indianred;
+    line-height: 15px;
+}
+.prices__item:nth-child(4) {
+    background: lightgreen;
+    line-height: 50px;
+} */
