--- a/15 flexbox/css/estilos.css
+++ b/15 flexbox/css/estilos.css
@@ -36,15 +36,16 @@ Flexbox
     NOTA: esta propiedad solo aplica al eje principal
     */
 
-    /* align-items: flex-end */; /* propiedad que permite que se alinee respecto al eje de cruze (cross axis) si se trata unicamente de una sola linea
+    /* align-items: flex-end; */ /* propiedad que permite que se alinee respecto al eje de cruze (cross axis) si se trata unicamente de una sola linea
     
     -> center: alinea en el centro del cross axis
     -> flex-start: coloca en el inicio del cross axis 
     -> strech: los coloca al inicio del cross axis pero abarcando todo el ancho del container
     -> flex-end: alinea al respecto al final del cross-axis
+    -> baseline: efecto que alinea el texto desplazando las cajas
     */
 
-    align-content: center; /* similar al funcionamiento de align-items pero aplicado a mas de una fila de elementos. Tiene los mismos atributos que align-items */
+    /* align-content: center; */ /* similar al funcionamiento de align-items pero aplicado a mas de una fila de elementos. Tiene los mismos atributos que align-items */
 }
 
 .flex-item {
@@ -54,7 +55,8 @@ Flexbox
     background-color: #9A348E;
     text-align: center;
     line-height: 50px;
-    margin: 0.5em
+    margin-left: auto;
+    margin-right: auto; /* en el caso de ser un contenedor flex lo que ocurre es al momento de usar un margin auto ocurre que el elemento se dige al extremo contrario del margen solicitado */
 }
 
 .box {
@@ -62,7 +64,6 @@ Flexbox
     width: 100%;
     height: 600px;
     display: flex;
-    /* align-items: center; */
 }
 
 .box img {
@@ -71,7 +72,7 @@ Flexbox
 
 /* .prices {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-start; 
     height: 600px;
     border: 1px solid black;
 }
@@ -85,8 +86,10 @@ Flexbox
 .prices__item:nth-child(2) {
     background: green;
     line-height: 20px;
-    align-self: center;
-}
+    align-self: flex-end; 
+  */   
+    /* propiedad que alinea a un elemento en especifico resecto al cross-axis */
+/* }
 .prices__item:nth-child(3) {
     background: indianred;
     line-height: 15px;
@@ -94,4 +97,5 @@ Flexbox
 .prices__item:nth-child(4) {
     background: lightgreen;
     line-height: 50px;
+    align-self: flex-end;
 } */
