--- a/17 grid fundamentos/css/estilos.css
+++ b/17 grid fundamentos/css/estilos.css
@@ -13,7 +13,7 @@ body{
 .grid-container{
     display: grid; /* por defecto solo coloca una columna*/
     grid-template-columns: 100px 100px 100px 100px; /* establece el numero de columnas y sus medidas */
-    grid-template-columns: 100px 100px 100px 100px; /* establece el numero de filas que habra y su tamaño */
+    grid-template-rows: 100px 100px 100px 100px; /* establece el numero de filas que habra y su tamaño */
     grid-gap: 10px; /* coloca el tamaño de separacion entre celdas.
     esto es un acortador para la opcion de grid-column-gap y grid-row-gap */
 
