--- a/25 responsive/css/estilos.css
+++ b/25 responsive/css/estilos.css
@@ -1,12 +1,43 @@
 body{
     margin: 0;
+    color: #eee;
     font-family: sans-serif;
+    background-image: radial-gradient(circle, #b94bf8, #3a1957);
     background-repeat: no-repeat;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+/* .flexbox{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flexbox__item{
+    margin: 2rem;
+    min-width: 320px;
+    flex: 1 1 320px; /* shorthand que engloba a lo que es grow, shrink y basis en ese orden (flex: grow shrink basis;) */
+/* } */ 
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(320px, 1fr));
+    grid-gap: 1rem;
 }
 
 .footer{
     background-color: red;
     padding: 1em;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    margin-top: auto; /* para colocar el footer siempre abajo se recomienda que el body tenga un display flex y colocarlo hasta el final con margin */
+}
+
+.banner{
+    background: royalblue;
+    padding: 15vw; /* en caso de usar un banner o algun elemento en el cual se requiera redimencionar se recomienda usar medidas relativas a la ventana */
     text-align: center;
     text-transform: uppercase;
     font-size: 1.5rem;
