--- a/28 grid responsive/css/estilos.css
+++ b/28 grid responsive/css/estilos.css
@@ -8,3 +8,23 @@ body{
     color: #000;
     font-family: sans-serif;
 }
+
+.contenedor{
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+}
+
+.contenedor > div, 
+.contenedor > .header,
+.contenedor > .contenido,
+.contenedor > .sidebar,
+.contenedor > .footer{
+    background: #fff;
+    padding: 20px;
+    border-radius: 4px;
+}
